feat: Enhance logging with SLF4J integration; update Maven build process and clean up code